--- a/autentificacion/templates/register.html
+++ b/autentificacion/templates/register.html
@@ -4,7 +4,7 @@
     {% csrf_token %}
     
     <div>
-        <label for="{{ form.first_name.id_for_label }}">Nombre:</label>
+        <label for="{{ form.first_name.id_for_label }}" required>Nombre:</label>
         {{ form.first_name }}
         {% if form.first_name.errors %}
             <p style="color: red;">{{ form.first_name.errors|striptags }}</p>
@@ -12,7 +12,7 @@
     </div>
 
     <div>
-        <label for="{{ form.last_name.id_for_label }}">Apellido:</label>
+        <label for="{{ form.last_name.id_for_label }}" required>Apellido:</label>
         {{ form.last_name }}
         {% if form.last_name.errors %}
             <p style="color: red;">{{ form.last_name.errors|striptags }}</p>
@@ -20,7 +20,7 @@
     </div>
 
     <div>
-        <label for="{{ form.dni.id_for_label }}">DNI:</label>
+        <label for="{{ form.dni.id_for_label }}" required>DNI:</label>
         {{ form.dni }}
         {% if form.dni.errors %}
             <p style="color: red;">{{ form.dni.errors|striptags }}</p>
@@ -28,7 +28,7 @@
     </div>
 
     <div>
-        <label for="{{ form.email.id_for_label }}">Correo Electrónico:</label>
+        <label for="{{ form.email.id_for_label }}" required>Correo Electrónico:</label>
         {{ form.email }}
         {% if form.email.errors %}
             <p style="color: red;">{{ form.email.errors|striptags }}</p>
@@ -36,7 +36,7 @@
     </div>
 
     <div>
-        <label for="{{ form.telefono.id_for_label }}">Telefono:</label>
+        <label for="{{ form.telefono.id_for_label }}" required>Telefono:</label>
         {{ form.telefono }}
         {% if form.telefono.errors %}
             <p style="color: red;">{{ form.telefono.errors|striptags }}</p>
