--- a/movimientos/templates/movimientos.html
+++ b/movimientos/templates/movimientos.html
@@ -93,6 +93,16 @@
 </style>
 
 <body>
+    <header>
+        <h1>Banco</h1>
+    </header>
+
+    <nav>
+        <a href="">tarjetas</a>
+        <a href="">mi cuenta</a>
+        <a href="">movimientos</a>
+    </nav>
+
 
     <h2>Movimientos</h2>
 
