--- a/autentificacion/templates/login.html
+++ b/autentificacion/templates/login.html
@@ -1,3 +1,6 @@
+<head>
+  <link rel="stylesheet" href="../../homebanking/static/styles.css">
+</head>
 {% block content %}
   <h2>Iniciar Sesión</h2>
   <form method="post" action="{% url 'login' %}">
