--- a/movimientos/templates/movimientos.html
+++ b/movimientos/templates/movimientos.html
@@ -5,46 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movimientos</title>
+    <link rel="stylesheet" href="../../homebanking/static/styles.css">
 </head>
 <style>
-    body {
-        font-family: 'Segoe UI', Tahoma, ;
-        padding: 0;
-        background-color: #f7f7f7;
-        color: #555;
-        align-items: center;
-        width: 100%;
-    }
-
-    header {
-        background-color: #35424a;
-        padding: 15px 20px;
-        color: #fff;
-        text-align: center;
-        position: relative;
-        z-index: 1;
-    }
-
-    nav {
-        background-color: #4CAF50;
-        overflow: hidden;
-        position: absolute;
-        justify-content: flex-end;
-        top: 0;
-        right: 0;
-        padding: 10px;
-        z-index: 1;
-    }
-
-    nav a {
-        display: block;
-        color: white;
-        text-align: center;
-        text-decoration: none;
-        padding: 5%;
-        margin-bottom: 7px;
-        transition: background-color 0.3s;
-    }
 
     h2 {
         margin-bottom: 20px;
@@ -79,16 +42,6 @@
 
     .compra {
         color: blueviolet;
-    }
-
-    footer {
-        background-color: #333;
-        color: white;
-        text-align: center;
-        padding: 10px;
-        position: fixed;
-        bottom: 0;
-        width: 100%;
     }
 </style>
 
