--- a/tarjetas/templates/tarjetas.html
+++ b/tarjetas/templates/tarjetas.html
@@ -3,14 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Tarjetas</title>
+    <link rel="stylesheet" href="../../homebanking/static/styles.css">
     <style>
-        body {
-            font-family: 'Helvetica Neue', Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
-        }
+       
 
         h1 {
             background-color: #3498db;
