--- a/tarjetas/templates/tarjetas.html
+++ b/tarjetas/templates/tarjetas.html
@@ -5,7 +5,98 @@
     <title>Tarjetas</title>
     <link rel="stylesheet" href="../../homebanking/static/styles.css">
     <style>
-       
+       body {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #013230;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%2304848D' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%2309FBFF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
+  color: #555;
+}
+
+header {
+  
+    background-color: #013230c0;
+    padding: 1px 3%;
+    color: #fff;
+    text-align: center;
+    position: relative;
+    z-index: -2;
+    margin: -10px;
+  
+}
+
+nav {
+  background-color: #4caf82b8;
+  overflow: hidden;
+  top: 0;
+  padding: 5px 25px;
+  z-index: 2;
+}
+
+nav a,
+p {
+  display: flex;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+  padding: 1px 3%;
+  margin-bottom: 7px;
+  transition: background-color 0.3s;
+  height: 55px;
+  margin-top: 2px;
+}
+
+nav a:hover {
+  background-color: #45a049;
+}
+
+section {
+  padding: 60px -20px 20px 20px;
+  text-align: center;
+  position: relative;
+  z-index: 0;
+  color: white;
+}
+
+.content {
+  margin-bottom: 40px;
+  overflow: hidden;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: #fff;
+}
+
+.content-text {
+  width: 60%;
+  float: left;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.content-image {
+  width: 35%;
+  float: right;
+  text-align: center;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.content img {
+  max-width: 100%;
+  border-radius: 8px;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+
+footer {
+  background-color: #35424a;
+  color: #fff;
+  text-align: center;
+  padding: 10px 0px;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  height: 3%;
+}
 
         h1 {
             background-color: #3498db;
