--- a/autentificacion/templates/home.html
+++ b/autentificacion/templates/home.html
@@ -162,7 +162,7 @@ footer {
             margin-top: 3px;
           "
         >
-          Saldo actual: ${{ cuenta.saldo }}
+          Saldo: $ {{ cuenta.saldo }}
         </p>
         {% else %}
         <a href="{% url 'login' %}">Iniciar Sesión</a>
