--- a/tarjetas/templates/tarjetas.html
+++ b/tarjetas/templates/tarjetas.html
@@ -9,7 +9,7 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   background-color: #013230;
   background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='400' viewBox='0 0 800 800'%3E%3Cg fill='none' stroke='%2304848D' stroke-width='1'%3E%3Cpath d='M769 229L1037 260.9M927 880L731 737 520 660 309 538 40 599 295 764 126.5 879.5 40 599-197 493 102 382-31 229 126.5 79.5-69-63'/%3E%3Cpath d='M-31 229L237 261 390 382 603 493 308.5 537.5 101.5 381.5M370 905L295 764'/%3E%3Cpath d='M520 660L578 842 731 737 840 599 603 493 520 660 295 764 309 538 390 382 539 269 769 229 577.5 41.5 370 105 295 -36 126.5 79.5 237 261 102 382 40 599 -69 737 127 880'/%3E%3Cpath d='M520-140L578.5 42.5 731-63M603 493L539 269 237 261 370 105M902 382L539 269M390 382L102 382'/%3E%3Cpath d='M-222 42L126.5 79.5 370 105 539 269 577.5 41.5 927 80 769 229 902 382 603 493 731 737M295-36L577.5 41.5M578 842L295 764M40-201L127 80M102 382L-261 269'/%3E%3C/g%3E%3Cg fill='%2309FBFF'%3E%3Ccircle cx='769' cy='229' r='5'/%3E%3Ccircle cx='539' cy='269' r='5'/%3E%3Ccircle cx='603' cy='493' r='5'/%3E%3Ccircle cx='731' cy='737' r='5'/%3E%3Ccircle cx='520' cy='660' r='5'/%3E%3Ccircle cx='309' cy='538' r='5'/%3E%3Ccircle cx='295' cy='764' r='5'/%3E%3Ccircle cx='40' cy='599' r='5'/%3E%3Ccircle cx='102' cy='382' r='5'/%3E%3Ccircle cx='127' cy='80' r='5'/%3E%3Ccircle cx='370' cy='105' r='5'/%3E%3Ccircle cx='578' cy='42' r='5'/%3E%3Ccircle cx='237' cy='261' r='5'/%3E%3Ccircle cx='390' cy='382' r='5'/%3E%3C/g%3E%3C/svg%3E");
-  color: #555;
+  color: #ffffff;
 }
 
 header {
@@ -98,11 +98,12 @@ footer {
   height: 3%;
 }
 
-        h1 {
-            background-color: #3498db;
+        h2 {
+            background-color: #4caf82b8;
             color: #fff;
             padding: 20px;
             margin: 0;
+            margin-top: 1rem;
         }
 
         ul {
@@ -130,11 +131,81 @@ footer {
     </style>
 </head>
 <body>
-    <h1>Mis Tarjetas</h1>
+
+    <header>
+      <h1 style="text-align: center">ITBANK</h1>
+    </header>
+    <nav style="justify-content: space-between;">
+      <div style="display: flex; justify-content: center;">
+        {% if user.is_authenticated %}
+        <a
+          href="{% url 'prestamo' %}"
+          style="
+            max-height: 20px;
+            min-width: 80px;
+            font-size: 15px;
+            padding-top: 5px;
+          "
+          >Solicitar Prestamo</a
+        >
+        <a
+          href="{% url 'movimientos' %}"
+          style="
+            max-height: 20px;
+            min-width: 80px;
+            font-size: 15px;
+            padding-top: 5px;
+          "
+          >Mis movimientos</a
+        >
+        <a
+          href="{% url 'perfil' %}"
+          style="
+            max-height: 20px;
+            min-width: 80px;
+            font-size: 15px;
+            padding-top: 5px;
+          "
+          >Mi Perfil</a
+        >
+        <a
+          href="{% url 'tarjetas' %}"
+          style="
+            max-height: 20px;
+            min-width: 80px;
+            font-size: 15px;
+            padding-top: 5px;
+          "
+          >Mis tarjetas</a
+        >
+        <a href="{% url 'logout' %}" style="
+        max-height: 20px;
+        min-width: 80px;
+        font-size: 15px;
+        padding-top: 5px;
+      ">Cerrar sesión</a>
+        <p
+          style="
+            max-height: 20px;
+            min-width: 80px;
+            font-size: 15px;
+            margin-top: 3px;
+          "
+        >
+          Saldo: $ {{ cuenta.saldo }}
+        </p>
+        {% else %}
+        <a href="{% url 'login' %}">Iniciar Sesión</a>
+        <a href="{% url 'register' %}">Registrarse</a>
+        {% endif %}
+      </div>
+    </nav>
+    <h2>Mis Tarjetas</h1>
     <ul>
         {% for tarjeta in tarjetas %}
             <li>{{ tarjeta.numero }} - {{ tarjeta.titular }} - {{ tarjeta.fecha_expiracion }}</li>
         {% endfor %}
     </ul>
+    <h3>No se encontraron tarjetas.</h3>
 </body>
 </html>
